--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "vendor/normalize";
 @import "vendor/data-accordion";
 @import "vendor/swiper";
+@import "vendor/leaflet";
 
 // Global
 // ---------------------------------
@@ -29,6 +30,10 @@
 @import "blocks/curriculum";
 @import "blocks/requirements";
 @import "blocks/news";
+@import "blocks/faq";
+@import "blocks/reviews";
+@import "blocks/contacts";
+@import "blocks/feedback";
 
 // ---------------------------------
 
