--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -15,6 +15,10 @@
   position: relative;
 }
 
+.feedback .btn {
+  width: 100%;
+}
+
 .feedback__content {
   display: flex;
   flex-direction: column;
@@ -77,58 +81,181 @@
     display: flex;
     flex-direction: column;
   }
+}
+
+.feedback__form-field {
+  position: relative;
+  margin: 0 0 20px;
+
+  &:last-of-type {
+    margin: 0 0 40px;
+  }
 
   & label {
     display: flex;
     flex-direction: column;
     gap: 12px;
-    margin: 0 0 20px;
+  }
 
-    &:last-child {
-      margin: 0 0 40px;
+  &--text {
+    & input,
+    & textarea {
+      width: 100%;
+      background-color: transparent;
+      border: 1px solid $color-default-white-20;
+      border-radius: 8px;
+      padding: 16px 25px;
+      height: 50px;
+    }
+
+    & span,
+    & p {
+      color: $color-alabaster;
+      opacity: 0.8;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 1.3;
+      margin: 0;
     }
   }
 
-  & label:has(input[type="checkbox"]) {
-    flex-direction: row;
-    align-items: center;
+  &--textarea {
+    & textarea {
+      height: 98px;
+    }
+  }
+
+  &--checkbox {
+    & span,
+    & p {
+      color: $color-alabaster;
+      opacity: 0.8;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 1.3;
+      margin: 0;
+    }
+
+    & label {
+      flex-direction: row;
+      align-items: center;
+      gap: 0;
+      padding: 0 0 0 30px;
+      position: relative;
+      cursor: pointer;
+      min-height: 20px;
+    }
 
     & span {
+      display: block;
+      width: 20px;
+      aspect-ratio: 1;
+      border-radius: 2px;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      translate: 0 -50%;
+      background-color: transparent;
+      border: 1px solid $color-default-white;
+      opacity: 0.7;
+      transition: background-color $trans-default, opacity $trans-default;
+    }
+
+    & svg {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      translate: -50% -50%;
+      fill: transparent;
+      transition: stroke $trans-default;
+    }
+
+    & input:checked + span {
+      background-color: $color-default-white;
+      opacity: 1;
+
+      & svg {
+        stroke: $color-cerulean-blue;
+      }
+    }
+
+    & p {
       font-size: 12px;
     }
   }
+}
+
+.feedback__dropdown-wrapper {
+  position: relative;
+  width: 100%;
+  background-color: transparent;
+  border-radius: 8px;
+  padding: 15px 36px 15px 20px;
+  border: 1px solid $color-default-white-30;
+  height: 50px;
+  cursor: pointer;
+}
+
+.feedback__dropdown-svg {
+  position: absolute;
+  top: 50%;
+  translate: 0 -50%;
+  right: 20px;
+}
+
+.feedback__dropdown-list {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  flex-direction: column;
+  list-style: none;
+  border-radius: 8px;
+  overflow: hidden;
+  position: absolute;
+  top: 90px;
+  z-index: 1;
+  display: none;
+  opacity: 0;
+  transition: opacity $trans-default;
+}
+
+.feedback__form-field--dropdown.is-active .feedback__dropdown-list {
+  display: block;
+  animation: fade 0.3s;
+  opacity: 1;
+}
+
+.feedback__dropdown-item {
+  & label {
+    padding: 17px 20px;
+    display: flex;
+    background-color: $color-default-white;
+    margin: 0;
+    cursor: pointer;
+  }
 
   & span {
-    color: $color-alabaster;
-    opacity: 0.8;
+    color: inherit;
     font-size: 14px;
-    font-weight: 400;
-    line-height: 1.3;
   }
+}
 
-  & input[type="text"],
-  & input[type="tel"],
-  & textarea {
-    width: 100%;
-    background-color: transparent;
-    border: 1px solid $color-default-white-20;
-    border-radius: 8px;
-    padding: 16px 25px;
-  }
+.feedback__dropdown-name {
+  color: $color-alabaster;
+  opacity: 0.8;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.3;
+  margin: 0 0 12px;
+}
 
-  & input[type="text"],
-  & input[type="tel"] {
-    height: 50px;
-  }
-
-  & textarea {
-    height: 98px;
-  }
+.feedback__dropdown-text {
+  font-size: 14px;
+  color: $color-default-white;
 }
 
 .feedback__img {
   position: absolute;
-  display: block;
   width: calc(100% - 200px);
   height: 100%;
   left: 50%;
@@ -148,5 +275,15 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
