--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,6 +17,7 @@ $color-torch-red:                   #ff1553;
 $color-cerulean-blue:               #316dc2;
 $color-black-pearl:                 #0d1d33;
 $color-charcoal:                    #484848;
+$color-charcoal-30:                 rgba(72, 72, 72, 0.3);
 $color-endeavour:                   #275699;
 $color-alabaster:                   #f0efe9;
 $color-mischka:                     #a9afb7;
