--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   max-width: 498px;
-  padding: 89px 74px 51px;
+  padding: 83px 74px 49px;
   background-color: $color-cerulean-blue;
   border-radius: 16px;
   position: relative;
@@ -31,12 +31,12 @@
 
   @include vp-1199 {
     max-width: 442px;
-    padding: 65px 45px 58px;
+    padding: 60px 45px 56px;
   }
 
   @include vp-767 {
     max-width: 100%;
-    padding: 56px 15px 50px;
+    padding: 52px 15px 50px;
   }
 }
 
@@ -45,17 +45,18 @@
   font-weight: 400;
   line-height: 1.1;
   color: $color-default-white;
-  margin: 0 0 35px;
+  margin: 0 0 26px;
 
   @include vp-1199 {
     font-size: 28px;
     line-height: 1;
-    margin: 0 0 35px;
+    margin: 0 0 28px;
   }
 
   @include vp-767 {
     font-size: 18px;
     line-height: 1.2;
+    margin: 0 0 17px;
   }
 }
 
@@ -63,16 +64,17 @@
   line-height: 1.6;
   opacity: 0.9;
   color: $color-alabaster;
-  margin: 0 0 30px;
+  margin: 0 0 18px;
 
   @include vp-1199 {
     line-height: 1.25;
-    margin: 0 0 40px;
+    margin: 0 0 32px;
   }
 
   @include vp-767 {
     font-size: 14px;
     line-height: 1.4;
+    margin: 0 0 27px;
   }
 }
 
@@ -84,17 +86,28 @@
 }
 
 .feedback__form-field {
-  position: relative;
-  margin: 0 0 20px;
+  margin: 0 0 16px;
+
+  @include vp-767 {
+    margin: 0 0 21px;
+  }
 
   &:last-of-type {
     margin: 0 0 40px;
+
+    @include vp-767 {
+      margin: 0 0 27px;
+    }
   }
 
   & label {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 8px;
+
+    @include vp-767 {
+      gap: 11px;
+    }
   }
 
   &--text {
@@ -116,12 +129,21 @@
       font-weight: 400;
       line-height: 1.3;
       margin: 0;
+
+      @include vp-767 {
+        font-size: 12px;
+        line-height: 1.16;
+      }
     }
   }
 
   &--textarea {
     & textarea {
       height: 98px;
+
+      @include vp-767 {
+        height: 94px;
+      }
     }
   }
 
@@ -185,73 +207,12 @@
   }
 }
 
-.feedback__dropdown-wrapper {
-  position: relative;
-  width: 100%;
-  background-color: transparent;
-  border-radius: 8px;
-  padding: 15px 36px 15px 20px;
-  border: 1px solid $color-default-white-30;
-  height: 50px;
-  cursor: pointer;
-}
+.feedback__form-field.dropdown {
+  margin: 0 0 20px;
 
-.feedback__dropdown-svg {
-  position: absolute;
-  top: 50%;
-  translate: 0 -50%;
-  right: 20px;
-}
-
-.feedback__dropdown-list {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  flex-direction: column;
-  list-style: none;
-  border-radius: 8px;
-  overflow: hidden;
-  position: absolute;
-  top: 90px;
-  z-index: 1;
-  display: none;
-  opacity: 0;
-  transition: opacity $trans-default;
-}
-
-.feedback__form-field--dropdown.is-active .feedback__dropdown-list {
-  display: block;
-  animation: fade 0.3s;
-  opacity: 1;
-}
-
-.feedback__dropdown-item {
-  & label {
-    padding: 17px 20px;
-    display: flex;
-    background-color: $color-default-white;
-    margin: 0;
-    cursor: pointer;
+  @include vp-1199 {
+    margin: 0 0 16px;
   }
-
-  & span {
-    color: inherit;
-    font-size: 14px;
-  }
-}
-
-.feedback__dropdown-name {
-  color: $color-alabaster;
-  opacity: 0.8;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.3;
-  margin: 0 0 12px;
-}
-
-.feedback__dropdown-text {
-  font-size: 14px;
-  color: $color-default-white;
 }
 
 .feedback__img {
