--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -24,7 +24,7 @@
   margin: 0 52px 0 0;
 
   @include vp-767 {
-    margin: 0 0 20px;
+    margin: 0 0 16px;
   }
 }
 
@@ -44,10 +44,10 @@
   }
 
   @include vp-767 {
-    gap: 15px 30px;
+    gap: 11px 30px;
     max-width: 100%;
     justify-content: center;
-    margin: 0 0 20px;
+    margin: 0 0 16px;
   }
 }
 
@@ -106,6 +106,10 @@
   background-color: $color-cerulean-blue;
   transition: background-color $trans-default;
 
+  @include vp-767 {
+    height: 26px;
+  }
+
   @include hover-focus {
     & .footer__socials-svg {
       opacity: 0.7;
@@ -159,6 +163,11 @@
 .footer__socials-svg {
   fill: $color-default-white;
   transition: opacity $trans-default;
+
+  @include vp-767 {
+    width: 12px;
+    height: 12px;
+  }
 }
 
 .footer__policy {
