--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,6 +34,8 @@
 @import "blocks/reviews";
 @import "blocks/contacts";
 @import "blocks/feedback";
+@import "blocks/dropdown";
+@import "blocks/modal";
 
 // ---------------------------------
 
