--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,6 +7,7 @@ $color-default-black:               #000000;
 $color-default-white:               #ffffff;
 $color-default-white-20:            rgba(255, 255, 255, 0.2);
 $color-default-white-30:            rgba(255, 255, 255, 0.3);
+$color-default-white-60:            rgba(255, 255, 255, 0.6);
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 // Project palette
@@ -21,6 +22,8 @@ $color-charcoal-30:                 rgba(72, 72, 72, 0.3);
 $color-endeavour:                   #275699;
 $color-alabaster:                   #f0efe9;
 $color-mischka:                     #a9afb7;
+$color-wild-watermelon:             #ff5e66;
+$color-wild-watermelon-50:             rgba(255, 94, 102, 0.5);
 
 // Gradient
 
