--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -3,7 +3,7 @@
   padding: 60px 0;
 
   @include vp-1199 {
-    padding: 47px 0 50px;
+    padding: 31px 0 50px;
   }
 
   @include vp-767 {
@@ -52,6 +52,11 @@
   width: 100%;
   cursor: pointer;
   padding: 0;
+  user-select: none;
+
+  @include hover-focus {
+    outline: none;
+  }
 }
 
 .faq__heading {
@@ -117,6 +122,30 @@
   background-color: transparent;
   transition: background-color $trans-default, padding $trans-default;
 
+  @include hover-focus {
+    &:not(.is-active) {
+      background-color: $color-default-white;
+
+      & .faq__visible-button {
+        background-color: $color-default-white;
+        border-color: $color-cerulean-blue;
+
+        &::before,
+        &::after {
+          background-color: $color-cerulean-blue;
+        }
+      }
+    }
+  }
+
+  &:active {
+    background-color: $color-endeavour;
+
+    & .faq__visible-button {
+      background-color: $color-default-white;
+    }
+  }
+
   @include vp-1199 {
     padding: 29px 30px;
   }
@@ -128,6 +157,31 @@
 
 .faq__item.is-active {
   background-color: $color-cerulean-blue;
+
+  @include hover-focus {
+    & .faq__visible-button {
+      border-color: $color-default-white;
+      background-color: transparent;
+
+      &::before,
+      &::after {
+        background-color: $color-default-white;
+      }
+    }
+  }
+
+  &:active {
+    background-color: $color-endeavour;
+
+    & .faq__visible-button {
+      background-color: $color-default-white;
+
+      &::before,
+      &::after {
+        background-color: $color-endeavour;
+      }
+    }
+  }
 
   @media (min-width: $vp-1200) {
     padding: 40px 40px 33px;
@@ -158,12 +212,13 @@
 
 .faq__visible-button {
   display: block;
-  width: 40px;
+  width: 39px;
+  border: 1px solid transparent;
   aspect-ratio: 1;
   background-color: $color-cerulean-blue;
   border-radius: 50%;
   position: relative;
-  transition: background-color $trans-default;
+  transition: background-color $trans-default, border-color $trans-default;
   align-self: start;
   flex-shrink: 0;
 
@@ -181,13 +236,13 @@
     width: 1px;
     height: 18px;
     top: 10px;
-    left: 20px;
+    left: 19px;
   }
 
   &::after {
     width: 18px;
     height: 1px;
-    top: 19px;
-    left: 11px;
+    top: 18px;
+    left: 10px;
   }
 }
