--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -66,6 +66,7 @@
 
   @include hover-focus {
     color: $color-cerulean-blue;
+    outline: none;
   }
 
   @include active {
@@ -111,6 +112,8 @@
   }
 
   @include hover-focus {
+    outline: none;
+
     & .footer__socials-svg {
       opacity: 0.7;
     }
@@ -198,6 +201,7 @@
 
   @include hover-focus {
     color: $color-cerulean-blue;
+    outline: none;
   }
 
   &:active {
