--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,8 +34,8 @@
 @import "blocks/reviews";
 @import "blocks/contacts";
 @import "blocks/feedback";
-@import "blocks/dropdown";
 @import "blocks/modal";
+@import "blocks/custom-select";
 
 // ---------------------------------
 
