--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -50,9 +50,17 @@
   border: none;
   border-radius: 16px;
   width: 100%;
+  padding: 40px 40px 38px;
   cursor: pointer;
-  padding: 0;
   user-select: none;
+
+  @include vp-1199 {
+    padding: 29px 30px;
+  }
+
+  @include vp-767 {
+    padding: 19px 15px;
+  }
 
   @include hover-focus {
     outline: none;
@@ -98,6 +106,8 @@
 }
 
 .faq__desc {
+  display: block;
+  text-align: start;
   line-height: 1.6;
   color: $color-default-white;
   max-width: 67%;
@@ -118,7 +128,6 @@
 .faq__item {
   border-radius: 16px;
   border: 1px solid $color-cerulean-blue;
-  padding: 40px 40px 38px;
   background-color: transparent;
   transition: background-color $trans-default, padding $trans-default;
 
@@ -144,14 +153,6 @@
     & .faq__visible-button {
       background-color: $color-default-white;
     }
-  }
-
-  @include vp-1199 {
-    padding: 29px 30px;
-  }
-
-  @include vp-767 {
-    padding: 19px 15px;
   }
 }
 
@@ -183,16 +184,16 @@
     }
   }
 
-  @media (min-width: $vp-1200) {
-    padding: 40px 40px 33px;
-  }
-
   & .faq__heading {
     color: $color-default-white;
   }
 
   & .faq__heading-wrapper {
     margin: 0 0 13px;
+
+    @include vp-1199 {
+      margin: 0 0 17px;
+    }
   }
 
   & .faq__visible-button {
