--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -11,17 +11,21 @@
   display: flex;
   flex-wrap: wrap;
   row-gap: 25px;
-  align-items: center;
 
   @include vp-767 {
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: normal;
   }
 }
 
 .footer .logo {
   margin: 0 52px 0 0;
+
+  @include vp-1199 {
+    margin: 0 7px 0 0;
+  }
 
   @include vp-767 {
     margin: 0 0 16px;
@@ -131,7 +135,8 @@
 .footer__docs {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
 
   @include vp-1199 {
     width: 50%;
@@ -150,6 +155,7 @@
 .footer__copyright {
   font-size: 14px;
   line-height: 1.3;
+  max-width: 227px;
 
   @include vp-1199 {
     font-size: 12px;
@@ -179,6 +185,9 @@
   position: relative;
   width: fit-content;
   transition: color $trans-default;
+  margin: 0 0 0 auto;
+  max-width: 212px;
+  height: fit-content;
 
   &::after {
     content: "";
@@ -193,6 +202,7 @@
   @include vp-1199 {
     font-size: 12px;
     line-height: 1;
+    margin: 0;
   }
 
   @include vp-767 {
