исправляет переполнение имени в блоке отзывов

--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -146,6 +146,7 @@
   line-height: 1.3;
   color: $color-cerulean-blue;
   max-width: 100px;
+  word-wrap: break-word;
   margin: 0;
 
   @include vp-1199 {
