исправляет отображение кастомного селекта

--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -107,7 +107,7 @@
 
   &__list {
     position: absolute;
-    bottom: -8px;
+    bottom: 0;
     z-index: 1;
     border-radius: 8px;
 
@@ -222,6 +222,7 @@
     .custom-select__list {
       visibility: visible;
       opacity: 1;
+      bottom: 28px;
     }
 
     .custom-select__icon {
