исправляет отображение кастомного селекта

--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -107,7 +107,7 @@
 
   &__list {
     position: absolute;
-    bottom: 0;
+    bottom: -8px;
     z-index: 1;
     border-radius: 8px;
 
@@ -222,7 +222,6 @@
     .custom-select__list {
       visibility: visible;
       opacity: 1;
-      bottom: 28px;
     }
 
     .custom-select__icon {
@@ -347,4 +346,8 @@
   & .custom-select__text {
     color: $color-charcoal;
   }
+}
+
+.custom-select:not(.open-up):has(.input-message) .custom-select__list {
+  bottom: 19px;
 }
