исправляет баги после тестирования

--- a/source/sass/blocks/curriculum.scss
+++ b/source/sass/blocks/curriculum.scss
@@ -1,5 +1,5 @@
 .curriculum {
-  padding: 67px 0 120px;
+  padding: 63px 0 121px;
   background-color: $color-alabaster;
   overflow: hidden;
 
@@ -8,7 +8,7 @@
   }
 
   @include vp-767 {
-    padding: 34px 0 65px;
+    padding: 36px 0 65px;
   }
 }
 
@@ -19,10 +19,16 @@
   }
 }
 
+.curriculum .btn__text {
+  @include vp-767 {
+    text-align: center;
+  }
+}
+
 .curriculum .container {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 40px;
+  row-gap: 39px;
   position: relative;
 
   @include vp-1199 {
@@ -30,7 +36,7 @@
   }
 
   @include vp-767 {
-    row-gap: 30px;
+    row-gap: 31px;
   }
 }
 
@@ -53,9 +59,11 @@
   overflow: hidden;
   width: 100%;
   height: fit-content;
+  margin: 5px 0 0;
 
   @include vp-1199 {
     overflow: visible;
+    margin: 0;
   }
 
   @include vp-767 {
@@ -76,7 +84,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding: 280px 20px 16px 20px;
+  padding: 275px 20px 20px;
   border-radius: 12px;
   overflow: hidden;
 
@@ -87,7 +95,9 @@
 
   @include vp-767 {
     min-height: 400px;
-    padding: 280px 10px 18px 10px;
+    padding: 270px 10px 18px 10px;
+    aspect-ratio: 0.73;
+    max-height: 875px;
   }
 }
 
@@ -120,7 +130,7 @@
   background-color: $color-default-white;
   font-weight: 400;
   line-height: 1.1;
-  padding: 13px 36px 6px 18px;
+  padding: 13px 36px 1px 18px;
   border-radius: 12px 12px 0 0;
   width: 194px;
   margin: 0;
@@ -147,7 +157,7 @@
   @include vp-767 {
     font-size: 16px;
     line-height: 1.1;
-    padding: 15px 35px 6px 18px;
+    padding: 21px 35px 5px 18px;
     width: 146px;
   }
 }
@@ -170,6 +180,7 @@
   @include vp-767 {
     max-width: 270px;
     min-height: 69px;
+    padding: 3px 18px 5px 18px;
   }
 }
 
@@ -207,6 +218,10 @@
 
   @include vp-1199 {
     margin: 19px 0 0;
+  }
+
+  @include vp-767 {
+    margin: 15px 0 0;
   }
 
   @include hover-focus {
@@ -303,6 +318,11 @@
   display: flex;
   align-items: center;
   width: calc(100% - 116px);
+  margin: 5px 0 0;
+
+  @include vp-1199 {
+    margin: 0;
+  }
 
   @include vp-767 {
     display: none;
