--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -54,6 +54,10 @@
   cursor: pointer;
   user-select: none;
 
+  @include hover-focus {
+    outline: none;
+  }
+
   @include vp-1199 {
     padding: 29px 30px;
   }
@@ -61,9 +65,30 @@
   @include vp-767 {
     padding: 19px 15px;
   }
+}
 
+.faq__item:not(.is-active) .faq__button {
   @include hover-focus {
+    background-color: $color-default-white;
     outline: none;
+
+    & .faq__visible-button {
+      background-color: $color-default-white;
+      border-color: $color-cerulean-blue;
+
+      &::before,
+      &::after {
+        background-color: $color-cerulean-blue;
+      }
+    }
+  }
+
+  &:active {
+    background-color: $color-endeavour;
+
+    & .faq__visible-button {
+      background-color: $color-default-white;
+    }
   }
 }
 
@@ -80,14 +105,14 @@
   @include vp-1199 {
     font-size: 22px;
     max-width: 500px;
-    margin: -4px 0;
+    margin: -6px 0;
   }
 
   @include vp-767 {
     max-width: 100%;
     font-size: 16px;
     line-height: 1.1;
-    margin: -2px 0;
+    margin: 0;
   }
 }
 
@@ -130,56 +155,34 @@
   border: 1px solid $color-cerulean-blue;
   background-color: transparent;
   transition: background-color $trans-default, padding $trans-default;
-
-  @include hover-focus {
-    &:not(.is-active) {
-      background-color: $color-default-white;
-
-      & .faq__visible-button {
-        background-color: $color-default-white;
-        border-color: $color-cerulean-blue;
-
-        &::before,
-        &::after {
-          background-color: $color-cerulean-blue;
-        }
-      }
-    }
-  }
-
-  &:active {
-    background-color: $color-endeavour;
-
-    & .faq__visible-button {
-      background-color: $color-default-white;
-    }
-  }
 }
 
 .faq__item.is-active {
   background-color: $color-cerulean-blue;
 
-  @include hover-focus {
-    & .faq__visible-button {
-      border-color: $color-default-white;
-      background-color: transparent;
+  & .faq__button {
+    @include hover-focus {
+      & .faq__visible-button {
+        border-color: $color-default-white;
+        background-color: transparent;
 
-      &::before,
-      &::after {
-        background-color: $color-default-white;
+        &::before,
+        &::after {
+          background-color: $color-default-white;
+        }
       }
     }
-  }
 
-  &:active {
-    background-color: $color-endeavour;
+    &:active {
+      background-color: $color-endeavour;
 
-    & .faq__visible-button {
-      background-color: $color-default-white;
+      & .faq__visible-button {
+        background-color: $color-default-white;
 
-      &::before,
-      &::after {
-        background-color: $color-endeavour;
+        &::before,
+        &::after {
+          background-color: $color-endeavour;
+        }
       }
     }
   }
