--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -89,6 +89,10 @@
   margin: 0 0 16px;
   position: relative;
 
+  @include vp-1199 {
+    margin: 0 0 15px;
+  }
+
   @include vp-767 {
     margin: 0 0 21px;
   }
@@ -97,7 +101,7 @@
     margin: 7px 0 40px;
 
     @include vp-1199 {
-      margin: 3px 0 40px;
+      margin: 6px 0 40px;
     }
 
     @include vp-767 {
