--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -73,7 +73,7 @@
     outline: none;
   }
 
-  @include active {
+  &:active {
     color: $color-endeavour;
   }
 }
@@ -86,6 +86,7 @@
   max-width: 204px;
   flex-wrap: wrap;
   margin: 0 0 0 auto;
+  align-items: center;
 
   @include vp-1199 {
     gap: 10px;
@@ -93,6 +94,7 @@
     width: 50%;
     order: 1;
     justify-content: flex-end;
+    align-items: flex-start;
   }
 
   @include vp-767 {
