--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,12 +1,19 @@
 .hero .swiper-slide {
-  padding: 447px 100px 60px;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 100px 60px;
 
   @include vp-1199 {
-    padding: 714px 45px 60px;
+    padding: 0 45px 60px;
+    height: 1024px;
   }
 
   @include vp-767 {
-    padding: 261px 15px 20px;
+    padding: 0 15px 20px;
+    height: auto;
+    aspect-ratio: 0.563;
+    max-height: 900px;
   }
 
   h2 {
@@ -46,6 +53,10 @@
   align-items: center;
   gap: 27px;
   position: relative;
+
+  &--higher-padding {
+    padding: 0 50px 33px;
+  }
 
   @include vp-1199 {
     max-width: 591px;
@@ -129,7 +140,8 @@
 
 .hero__slide-wrapper {
   max-width: 1240px;
-  margin: 0 auto;
+  margin: auto auto 0;
+  width: 100%;
 }
 
 .hero .swiper-wrapper {
@@ -167,10 +179,10 @@
   padding: 0 100px;
   height: fit-content;
   position: absolute;
-  top: 409px;
   left: 50%;
   translate: -50% 0;
   z-index: 1;
+  transition: top 1ms ease;
 
   @include vp-1199 {
     top: 676px;
@@ -185,7 +197,8 @@
 
 .hero .swiper-pagination {
   width: fit-content;
-  position: static;
+  position: relative;
+  inset: auto;
   padding: 14px 20px;
   background-color: $color-default-white;
   border-radius: 20px 20px 0 0;
