--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -64,7 +64,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 24px 15px;
+    margin: 0 0 21px 15px;
     flex-wrap: nowrap;
     overflow-y: auto;
     justify-content: flex-start;
@@ -86,6 +86,7 @@
   cursor: pointer;
   transition: border-color $trans-default, opacity $trans-default;
   opacity: 0.6;
+  user-select: none;
 
   @include hover-focus {
     opacity: 1;
@@ -230,7 +231,7 @@
     font-size: 16px;
     line-height: 1.1;
     max-width: 200px;
-    padding: 11px 13px 1px 0;
+    padding: 11px 11px 6px 0;
   }
 
   &::before {
@@ -261,7 +262,7 @@
 
   @include vp-767 {
     max-width: 263px;
-    padding: 12px 10px 10px 0;
+    padding: 12px 10px 5px 0;
   }
 
   &::before {
