--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,8 +22,11 @@ $color-charcoal-30:                 rgba(72, 72, 72, 0.3);
 $color-endeavour:                   #275699;
 $color-alabaster:                   #f0efe9;
 $color-mischka:                     #a9afb7;
+$color-mischka-50:                  rgba(169, 175, 183, 0.50);
+$color-mischka-20:                  rgba(169, 175, 183, 0.20);
 $color-wild-watermelon:             #ff5e66;
-$color-wild-watermelon-50:             rgba(255, 94, 102, 0.5);
+$color-wild-watermelon-50:          rgba(255, 94, 102, 0.5);
+$color-wild-watermelon-20:          rgba(255, 94, 102, 0.2);
 
 // Gradient
 
